--- a/Learninator/Learninator/Views/Home/Index.cshtml
+++ b/Learninator/Learninator/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <h1>Welcome to the Learninator</h1>
 
-<h2>Links</h2>
-@Html.ActionLink("Links", "Index", "Links")
+<h2>@Html.ActionLink("Links", "Index", "Links")</h2>
+<h2>@Html.ActionLink("Tags", "Index", "Tags")</h2>
