WIP getting the interactive tagging working

--- a/Learninator/Learninator/Views/Home/Index.cshtml
+++ b/Learninator/Learninator/Views/Home/Index.cshtml
@@ -6,3 +6,4 @@
 
 <h2>@Html.ActionLink("Links", "Index", "Links")</h2>
 <h2>@Html.ActionLink("Tags", "Index", "Tags")</h2>
+<h2>@Html.ActionLink("Test", "Index", "Test")</h2>
