--- a/Learninator/Learninator/Views/Links/GetTags.cshtml
+++ b/Learninator/Learninator/Views/Links/GetTags.cshtml
@@ -7,6 +7,7 @@
 <h1>GetTags</h1>
 
 <p>
+    <a asp-action="Index"> &lt;- Back</a> |
     <a asp-action="ConnectTags" asp-route-id="@ViewBag.LinkId">Create New</a>
 </p>
 <table class="table">
