--- a/Learninator/Learninator/Views/Links/Index.cshtml
+++ b/Learninator/Learninator/Views/Links/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
+            <th>
+                Tags
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +32,16 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                    @foreach (var tag in item.LinkTags)
+                    {
+                        @Html.DisplayFor(modelItem => tag.Tag.Name)
+                        if (item.LinkTags.Count > 1)
+                        {
+                            @Html.Raw(",&nbsp;")
+                        }
+                    }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
