--- a/Learninator/Learninator/Views/Test/Tagging.cshtml
+++ b/Learninator/Learninator/Views/Test/Tagging.cshtml
@@ -9,31 +9,37 @@
     <label asp-for="Name" class="control-label" />
     <input asp-for="Name" type="text" id="tagInput" class="form-control" />
     <h2 id="tagId">-2</h2>
+    <h2 id="tagName">[TagName]</h2>
     <input type="submit" value="Create" class="btn btn-default" />
 </form>
 
 @section scripts
 {
-<script src="~/js/Tag.js"></script>
+@*<script src="~/js/Tag.js"></script>*@
 <script>
     $(document).ready(function () {
         var input = $("#tagInput");
-        input.on("change", x => {
+        var tagId = $("#tagId");
+        var tagName = $("#tagName");
+        input.on("change keyup", x => {
             console.log("change!")
             //var id = Tag.GetByName(input.val());
 
-            var id = -1;
-            var result = $.ajax({
-                url: "/Tags/GetTagByName?name=" + name,
+            $.ajax({
+                url: "/Tags/GetTagByName?name=" + input.val(),
+                contentType: "application/json",
                 success: function (data) {
-                    id = data
-                },
-                async: false
-            });
-            console.log("Tag.GetByName returns: " + id);
+                    var id = data.id;
+                    var name = data.name;
 
-            console.log("Id: " + id);
-            $("#tagId").html = id;
+                    tagId.html(id);
+                    tagName.html(name);
+                },
+                error: function () {
+                    tagId.html(-1);
+                    tagName.html("[NoTagFound]");
+                }
+            }); 
         }) 
     })
 </script>
