Implemented an autocomplete/search suggestions style functionality in testing. TODO: Extend this for multi tagging, and use this on the real view.

--- a/Learninator/Learninator/Views/Test/Index.cshtml
+++ b/Learninator/Learninator/Views/Test/Index.cshtml
@@ -4,4 +4,5 @@
 }
 
 <h1>Index</h1>
-@Html.ActionLink("Tagging", "Tagging", "Test")
+@Html.ActionLink("Tagging", "Tagging", "Test")<br/>
+@Html.ActionLink("SearchTag", "SearchTag", "Test")
