--- a/Learninator/Learninator/wwwroot/css/Tag.css
+++ b/Learninator/Learninator/wwwroot/css/Tag.css
@@ -15,3 +15,10 @@
     padding: 3px;
 }
 
+.tagButton {
+    background-color: lightgoldenrodyellow;
+    border-radius: 3px;
+    border: 1px solid;
+    border-color: gray;
+    margin: 2px;
+}
