--- a/Learninator/Learninator/Views/Test/SearchTag.cshtml
+++ b/Learninator/Learninator/Views/Test/SearchTag.cshtml
@@ -9,12 +9,16 @@
 <form id="tagForm" method="post" onsubmit="">
 
     <div class="tag-main">
-        <span id="tagSet" class="tagset"></span><input style="display:inline" autocomplete="off" type="text" id="tagInput" /><br/>
+        <div style="text-align:left; width: 50%; display:inline-block; float:left">
+        <div id="tagSet" class="tagset" style="display:inline-block"></div><input style="display:inline-block" autocomplete="off" type="text" id="tagInput" />
+        </div>
+        <div style="text-align:right; width: 50%; display:inline-block; float:left">
+            <a id="btnDeleteLastTag" class="btn btn-default" style="background-color:lightcoral; display:inline;">Delete last tag</a>
+            <input type="submit" value="Create" class="btn btn-default" style="display:inline;" />
+        </div>
     </div>
-    <span id="tagName">[TagName]</span>
-    <h2 id="tagId">-2</h2>
-<a id="btnDeleteLastTag"class="btn btn-default" style="background-color:lightcoral">Delete last tag</a>
-    <input type="submit" value="Create" class="btn btn-default" />
+    <span id="tagName"></span>
+    <h2 id="tagId" hidden="hidden">-2</h2>
 </form>
 
 @section scripts
