--- a/Learninator/Learninator/Views/Links/Index.cshtml
+++ b/Learninator/Learninator/Views/Links/Index.cshtml
@@ -47,7 +47,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-action="GetTags" asp-route-id="@item.Id">Edit tags</a>
+                <a asp-action="EditTags" asp-route-id="@item.Id">Edit tags</a>
             </td>
         </tr>
 }
