WIP on implementing the tag creation by name flow. TODO: Finish the flow, and then add it to the EditTags view.

--- a/Learninator/Learninator/Views/Test/Index.cshtml
+++ b/Learninator/Learninator/Views/Test/Index.cshtml
@@ -5,4 +5,6 @@
 
 <h1>Index</h1>
 @Html.ActionLink("Tagging", "Tagging", "Test")<br/>
-@Html.ActionLink("SearchTag", "SearchTag", "Test")
+@Html.ActionLink("SearchTag", "SearchTag", "Test")<br/>
+@Html.ActionLink("TestCreateOrGetTag", "TestCreateOrGetTag", "Test")
+
