Added functionality to add new nonexistent tag to list

--- a/Learninator/Learninator/Views/Links/CreateAjax.cshtml
+++ b/Learninator/Learninator/Views/Links/CreateAjax.cshtml
@@ -48,6 +48,7 @@
 
 @section scripts
 {
+    <script src="~/js/TagSave.js" asp-append-version="true"></script>
     <script src="~/js/Tag.js" asp-append-version="true"></script>
     <script>
         $(document).ready(function () {
