Added ListUsers page and menu item

--- a/Learninator/Learninator/Views/Administration/Index.cshtml
+++ b/Learninator/Learninator/Views/Administration/Index.cshtml
@@ -7,6 +7,6 @@
 <h1>Administration</h1>
 
 <ul>
+    <li><a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="ListUsers">List Users</a></li>
     <li><a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="ListRoles">List Roles</a></li>
-    <li><a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="EditUsersInRole">Edit User Roles</a></li>
 </ul>
