--- a/Learninator/Learninator/Views/Administration/ListUsers.cshtml
+++ b/Learninator/Learninator/Views/Administration/ListUsers.cshtml
@@ -24,9 +24,20 @@
                 <h5 class="card-title">@user.UserName</h5>
             </div>
             <div class="card-footer">
-                <a asp-action="EditUser" asp-controller="Administration" 
-                   asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
-                <a href="#" class="btn btn-danger">Delete</a>
+                <form asp-action="DeleteUser" asp-route-id="@user.Id" method="post">
+                    <a asp-action="EditUser" asp-controller="Administration"
+                       asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+                    <span style="display:none" id="confirmDeleteSpan_@user.Id">
+                        <span>Are you sure you want to delete?</span>
+                        <button type="submit" href="#" class="btn btn-danger">Yes</button>
+                        <a href="#" class="btn btn-primary"
+                           onclick="confirmDelete('@user.Id', false);" >No</a>
+                    </span>
+                    <span id="deleteSpan_@user.Id">
+                        <a href="#" class="btn btn-danger"
+                           onclick="confirmDelete('@user.Id', true);">Delete</a>
+                    </span>
+                </form>
             </div>
         </div>
     }
@@ -47,4 +58,8 @@ else
             </a>
         </div>
     </div>
+}
+
+@section Scripts {
+    <script src="~/js/Confirmation.js"></script>
 }
